examples/datalog/11_types/39_int_to_float.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_int_float
Knowledge graph 'test_int_float' created.
Switched to knowledge graph: test_int_float
> .kg use test_int_float
Switched to knowledge graph: test_int_float
> +data[(10, 2.5), (20, 3.0)].
Inserted 2 fact(s) into 'data'.
> result(A, B, R) :- data(A, B), R = A * B.
Script error: Query execution failed: Unsafe rule: Atom { relation: "result", args: [Variable("A"), Variable("B"), Variable("R")] }. Variables ["R"] in head do not appear in positive body atoms.
