examples/datalog/11_types/39_int_to_float.dl
% Test: Integer and float in same expression
% Expected: Mixed numeric types work
% Category: 11_types
% Priority: P2 - Type handling

.kg create test_int_float
.kg use test_int_float

+data[(10, 2.5), (20, 3.0)].

% Int + float
result(A, B, R) :- data(A, B), R = A * B.

?- result(A, B, R).

.kg use default
.kg drop test_int_float
